helm/prometheus/grafana-ingress-temp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: prometheus
  annotations:
spec:
  ingressClassName: nginx
  rules:
  #Era pra ser grafana.signacio.com.br mas o pc do trabalho bloqueia DNS "suspeitos"
  - host: grafana.signacio.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
